--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.0",
     "chart.js": "^4.3.2",
     "react": "^18.2.0",
+    "react-bootstrap-icons": "^1.10.3",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "reactstrap": "^9.2.0"
